--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: url("../img/background.jpg");
+    background-image: url("../img/background2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
