--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,7 @@ table caption {
 /*</editor-fold>*/
 /*</editor-fold>*/
 
+/*<editor-fold desc="Lab02">*/
 .card-subtitle {
     padding: 0.5em 0 1em 0;
 }
@@ -116,6 +117,7 @@ table caption {
 footer {
     margin-top: auto;
 }
+/*</editor-fold>*/
 
 @media (max-width: 1024px) {
     #svgAvatar {
