Refactored applyStyles function to support bolding only and updated getOccupancy function to bold occupancy percentage
Refactoring the `applyStyles` function to support only bolding an element and updating the `getOccupancy` function to bold the occupancy percentage in the output.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,12 @@
+:root {
+    --black: oklch(1 0 89.876);
+    --purple: oklch(60% 0.37 294.7);
+    --orange: oklch(60% 0.37 64.65);
+    --yellow: oklch(60% 0.37 109.08);
+    --blue: oklch(60% 0.37 237.06);
+    --black-alpha-50: color-mix(in oklch, var(--black), transparent);
+}
+
 body, html {
     font-family: Arial, Helvetica, sans-serif;
     color: #dda15e;
@@ -114,6 +123,55 @@ table caption {
 /*</editor-fold>*/
 
 /*<editor-fold desc="Lab02">*/
+/*<editor-fold desc="Card Effect">*/
+.card {
+    animation: spin 2s linear infinite;
+    background: linear-gradient(to bottom, var(--black), var(--black)) padding-box,
+    conic-gradient(
+            in oklch from var(--gradient-angle),
+            var(--purple),
+            var(--orange),
+            var(--yellow),
+            var(--blue),
+            var(--purple)
+    ) border-box;
+    border: 5px solid transparent;
+    border-radius: 20px;
+    position: relative;
+
+    &::after {
+        animation: spin 2s linear infinite;
+        background: conic-gradient(
+                in oklch from var(--gradient-angle),
+                var(--purple),
+                var(--orange),
+                var(--yellow),
+                var(--blue),
+                var(--purple)
+        );
+        border-radius: 15px;
+        content: "";
+        position: absolute;
+        inset: 0;
+        filter: blur(50px);
+        z-index: -1;
+    }
+}
+
+@property --gradient-angle {
+    inherits: false;
+    initial-value: 0deg;
+    syntax: "<angle>";
+}
+
+@keyframes spin {
+    to {
+        --gradient-angle: 360deg;
+    }
+}
+
+/*</editor-fold>*/
+
 .card-subtitle {
     padding: 0.5em 0 1em 0;
 }
@@ -150,3 +208,4 @@ footer {
         transform: none;
     }
 }
+
