Post Lab02 finishing.
HTML:

- Minor Formatting

CSS:

- Added CSS for index.html

JS:

- Renamed "scriptTemplate.js" to "script.js"
- Added clearInnerHTML()
- Modified function calls to applyStyles()
- Formatting
- Declared new global var styles[]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,13 @@ body {
     background-size: cover;
 }
 
+/*<editor-fold desc="Index">*/
+.active {
+    transition: all 0.5s ease;
+    animation: colorChange 2s infinite;
+}
+/*</editor-fold>*/
+
 /*<editor-fold desc="Lab01">*/
 /*<editor-fold desc="Nav Bar Stuff">*/
 .nav-link.active {
