Added error-input styling in style.css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,7 +206,7 @@ footer {
 
 /*</editor-fold>*/
 
-#name-input, #find-letter-input, #date-input {
+#name-input, #find-letter-input, #date-input, #error-input {
     width: 50%;
     margin: 1em 0 1em 0;
 }
