Added CSS and refactored JavaScript to improve hotel booking feature
Specific changes include: added a new CSS class 'title-underline' for title styling, refactored JavaScript to enhance how hotel cards are displayed, and initialized 'Book Now' buttons for each hotel room. These changes enhance the user interface and improve the usability of the site.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,6 +218,13 @@ input[type="date"] {
 }
 /*</editor-fold>*/
 
+.title-underline {
+    text-decoration: underline;
+    text-decoration-color: #000;
+    text-underline-offset: 1.2em;
+    text-decoration-thickness: 1px;
+}
+
 @media (max-width: 1024px) {
     #svgAvatar {
         display: none;
