Add new lab05.html page, update CSS, and add corresponding JS
Introduced new lab05.html page, complete with additional Bootstrap and custom CSS. Details include the implementation of a registration form user interface. In static/css/style.css, added color to .modal class for improved aesthetics. A new JavaScript file - lab05.js - has been created for handling DOMContentLoaded event and user registration functionality.
```

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -228,6 +228,10 @@ input[type="date"] {
 
 /*</editor-fold>*/
 
+.modal {
+    color: #3d4144;
+}
+
 @media (max-width: 1024px) {
     #svgAvatar {
         display: none;
