Add comments, new functions, and events in lab05.html and related files
Revised CSS and JavaScript files to add comments, improve form validation, and include new login/logout button functionality. Updated lab05.html with a plan for a future button addition. Improved user interactivity in lab05.js with fade-out animations and clearInvalidInputs function implementation for better error handling.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -229,9 +229,12 @@ input[type="date"] {
 
 /*</editor-fold>*/
 
+/*<editor-fold desc="Lab05">*/
 .modal {
     color: #3d4144;
 }
+
+/*</editor-fold>*/
 
 @media (max-width: 1024px) {
     #svgAvatar {
